--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,7 @@
 <body>
   <h1>Leaderboard</h1>
   <div id="leaderboard">Loading…</div>
+  <div id="sort-controls" style="margin-top: 1em;"></div>
   <script src="scores.js"></script>
 </body>
 </html>
