--- a/web/index.html
+++ b/web/index.html
@@ -21,12 +21,64 @@
     td:first-child {
       text-align: left;
     }
+    
+    /* Modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.4);
+    }
+    .modal-content {
+      background-color: #fefefe;
+      margin: 5% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      max-width: 600px;
+      border-radius: 8px;
+    }
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
   <h1>Leaderboard</h1>
+  <div id="metric-controls" style="margin-bottom: 1em;"></div>
   <div id="leaderboard">Loading…</div>
-  <div id="sort-controls" style="margin-top: 1em;"></div>
+  
+  <!-- New Metric Modal -->
+  <div id="new-metric-modal" class="modal">
+    <div class="modal-content">
+      <span class="close" id="close-new-metric">&times;</span>
+      <h2>New Metric</h2>
+      <div id="new-metric-form"></div>
+    </div>
+  </div>
+  
+  <!-- Edit Metric Modal -->
+  <div id="edit-metric-modal" class="modal">
+    <div class="modal-content">
+      <span class="close" id="close-edit-metric">&times;</span>
+      <h2>Edit Metric</h2>
+      <div id="edit-metric-form"></div>
+    </div>
+  </div>
+  
   <script src="scores.js"></script>
 </body>
 </html>
