--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Leaderboard</title>
+  <title>LLM Benchmark Aggregator & Estimator</title>
   <style>
     table {
       border-collapse: collapse;
