Add a dropdown to choose the X-axis metric

--- a/web/index.html
+++ b/web/index.html
@@ -118,6 +118,17 @@
   <div id="tab-content">
     <div id="chart-container" class="tab-panel active">
       <div id="chart">Loading chart…</div>
+      <div id="x-axis-controls" style="margin-bottom: 1em;">
+        <label for="x-axis-select">X-axis Metric:</label>
+        <select id="x-axis-select">
+          <option value="Cost of 1K responses">Cost of 1K Responses</option>
+          <option value="Active parameters">Active parameters</option>
+          <option value="Input cost">Input Cost</option>
+          <option value="Output cost">Output Cost</option>
+          <option value="Size">Size</option>
+          <option value="ArtificialAnalysis Consumed Tokens (Millions)">ArtificialAnalysis Consumed Tokens (Millions)</option>
+        </select>
+      </div>
     </div>
     <div id="table-container" class="tab-panel">
       <div id="leaderboard">Loading…</div>
