Add release date as X-axis metric

--- a/web/index.html
+++ b/web/index.html
@@ -126,6 +126,7 @@
           <option value="Input cost">Input Cost</option>
           <option value="Output cost">Output Cost</option>
           <option value="Size">Size</option>
+          <option value="Release date">Release date</option>
           <option value="ArtificialAnalysis Consumed Tokens (Millions)">ArtificialAnalysis Consumed Tokens (Millions)</option>
         </select>
       </div>
