Add history tab

--- a/web/index.html
+++ b/web/index.html
@@ -112,6 +112,7 @@
   <div id="tab-navigation">
     <button id="chart-tab" class="tab-button active">Chart</button>
     <button id="table-tab" class="tab-button">Table</button>
+    <button id="history-tab" class="tab-button">History</button>
   </div>
 
   <!-- Tab Content -->
@@ -133,6 +134,9 @@
     </div>
     <div id="table-container" class="tab-panel">
       <div id="leaderboard">Loading…</div>
+    </div>
+    <div id="history-container" class="tab-panel">
+      <div id="history-chart">Loading history chart…</div>
     </div>
   </div>
 
